# ato_timesheet

./: .gitignore  README.md  input.yaml.sample  pyproject.toml
ato_timesheet/: calculator.py  config.py  models.py  parser.py  timesheet.py
